packages/fuselage/src/components/Option/Option.styles.scss
@use '../../styles/colors.scss';
@use '../../styles/lengths.scss';
@use '../../styles/typography.scss';

$variants: (
  'success': colors.success(700),
  'danger': colors.danger(700),
  'warning': colors.warning(700),
  'primary': colors.primary(700),
);

%column {
  flex: 0 0 auto;

  margin-inline: lengths.margin(2);
}

.rcx-option {
  @include clickable;
  @include typography.use-font-scale(p2);

  padding: lengths.padding(4) lengths.padding(12);

  list-style: none;

  color: colors.font(default);

  &__title {
    @include typography.use-font-scale(c2);

    padding-block-start: lengths.padding(8);
    padding-block-end: lengths.padding(4);
    padding-inline: lengths.padding(12);

    color: colors.font(default);
  }

  &__wrapper {
    display: flex;
    align-items: center;

    margin-inline: lengths.margin(-2);
  }

  &__icon {
    color: inherit;
  }

  &__avatar {
    @extend %column;
  }

  &__content {
    @include typography.use-text-ellipsis;
    @extend %column;
    flex: 1 1 100%;

    text-align: start;

    white-space: nowrap;
  }

  &__header {
    @include typography.use-font-scale(micro);

    padding-block: lengths.padding(8);
    padding-inline: lengths.padding(16);

    text-transform: uppercase;

    font-weight: 400;
  }

  &__menu-wrapper {
    flex-shrink: 0;

    width: 0;

    height: 100%;

    opacity: 0;
  }

  .rcx-option__column {
    @extend %column;
    display: flex;

    justify-content: center;
    align-items: center;

    min-width: lengths.size(28);
    min-height: lengths.size(20);
  }

  .rcx-option__description {
    @include typography.use-font-scale(p2);
    @extend %column;
    display: inline;

    color: colors.font(secondary-info);
  }

  &:hover,
  &--focus {
    background: colors.neutral(100);
  }

  &--selected {
    background: colors.neutral(500);
  }

  &:hover &__menu-wrapper,
  &.focus-within &__menu-wrapper,
  &:focus-within &__menu-wrapper {
    display: flex;
    align-items: center;

    width: lengths.size(28);

    opacity: 1;
  }

  @each $name, $color in $variants {
    &--#{$name} {
      color: theme('option-color-variant-#{$name}', $color);
    }
  }
}

